		Fixing pmax bootpath bug (thanks for Andreas Gustafsson for 
		figuring out what the problem was).
20190610	Adding a memory range (ROM) dumping tool for HP 700/RX to the
		experiments directory.
20190611	Expanding the MIPS lw/sw 2-, 3-, and 4-instruction combinations
		(when loading/storing using the same base register) so that
		they are used also when emulating 64-bit CPUs such as the
		R4400. (Note: still lw/sw, i.e. 32-bit loads and stores, NOT
		ld/sd.)  Also stretching it to 5-instruction-sequences.
20190614	Adding __builtin_expect (likely/unlikely) detection to the
		configure script.

==============  RELEASE 0.6.2  ==============

20190626	Rounding up disk image sizes to full cylinders; fixes a bug
		where guest OSes could fail to read the end of e.g. a .tar.gz
		file supplied as a disk image on the command line.
20201006	Applying a rather large patch from Jason Thorpe for using
		/dev/tap devices in addition to the existing networking modes.
		The patch also consists of enhancements to the DEC21143 and
		Lance ethernet devices to perform packet filtering.
20201015	Adding support for masks for memory mapped components in the
		new framework. Used so far by the HP 700/RX, which has 2 MB
		RAM repeated throughout 0x30000000..0x3fffffff.
20201101	bootblock.cc now parses SGI disk boot blocks, and tries to
		load the OSLoader (sash), if booting without an explicitly
		provided OS kernel.
20201103	The ECOFF file loader can now (barely) load relocated binaries,
		such as "sash" from an IRIX installation on my real O2.
20201105	Some minor refactoring of arcbios environment variables etc,
		to attempt to get emulated O2 boot-from-disk image (or cdrom
		image) to work better.
20210116	Include ASID and VPN2 in MIPS load/store misalignment
		exceptions (patch from Nick Hudson).
20210123	Adding a patch from Luchezar Georgiev for missing variant of
		rot for 88100 (immediate argument), and for missing addu_cio
		and subu_cio instructions.