@@ -16,7 +16,7 @@
 
 <!--
 
-Copyright (C) 2006-2019  Anders Gavare.  All rights reserved.
+Copyright (C) 2006-2021  Anders Gavare.  All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions are met:
@@ -46,13 +46,13 @@ SUCH DAMAGE.
 
 
 <p>This emulation mode attempts to emulate a Luna 88K workstation. Note that these
-were based on Motorola 88000 processors, not 68000.
+were based on <a href="https://en.wikipedia.org/wiki/Motorola_88000">Motorola
+88000</a> processors, not 68000.
 
-<p><font color="red">NOTE:</font> The Luna 88K emulation mode is not fully working yet.
-An older OpenBSD/luna88k
-ramdisk kernel can reach userland and be interacted with, and some framebuffer
-output can be seen. Newer kernels, however, panic. Most likely, this is due
-to bugs in the emulator.
+<p><font color="red">NOTE:</font> The Luna 88K emulation mode is not fully
+working yet. OpenBSD/luna88k ramdisk kernels can reach userland and be
+interacted with, in serial console mode. Using a graphical framebuffer works
+but no keyboard is emulated yet, so it is not useful.
 
 
 
@@ -69,28 +69,17 @@ to bugs in the emulator.
 Download a RAMDISK kernel:
 
 <ul>
-	<li><a href="https://ftp.eu.openbsd.org/pub/OpenBSD/5.4/luna88k/bsd.rd">https://ftp.eu.openbsd.org/pub/OpenBSD/5.4/luna88k/bsd.rd</a>
-	<li><a href="https://ftp.eu.openbsd.org/pub/OpenBSD/5.9/luna88k/bsd.rd">https://ftp.eu.openbsd.org/pub/OpenBSD/5.9/luna88k/bsd.rd</a>
-	<li><a href="https://ftp.eu.openbsd.org/pub/OpenBSD/6.2/luna88k/bsd.rd">https://ftp.eu.openbsd.org/pub/OpenBSD/6.2/luna88k/bsd.rd</a>
+	<li><a href="https://ftp.eu.openbsd.org/pub/OpenBSD/6.8/luna88k/bsd.rd">https://ftp.eu.openbsd.org/pub/OpenBSD/6.8/luna88k/bsd.rd</a>
 </ul>
 
-<p>For 5.4 and below:
-<pre>
-	<b>gxemul -e luna-88k 0x20000:0x20:bsd.rd</b>
-</pre>
-
-<p>or for the newer ones:
-
+<p>
+Start the emulator like this:
 <pre>
 	<b>gxemul -e luna-88k bsd.rd</b>
-</pre>
 
-<p>From 6.0 and newer, bugs are triggered (most likely in GXemul):
-<pre>
-	panic: amap_wipeout: corrupt amap
+	<i>(For older OpenBSD/luna88k kernels, 5.4 and below:)
+	gxemul -e luna-88k 0x20000:0x20:bsd.rd</i>
 </pre>
-
-<p>The 5.9 kernel gets further than 6.0 (reaching userland) when run without graphical framebuffer:
 
 <pre>
 CPU0 is associated to 2 MC88200 CMMUs
@@ -99,12 +88,13 @@ CPU2 is associated to 2 MC88200 CMMUs
 CPU3 is associated to 2 MC88200 CMMUs
 Copyright (c) 1982, 1986, 1989, 1991, 1993
 	The Regents of the University of California.  All rights reserved.
-Copyright (c) 1995-2016 OpenBSD. All rights reserved.  http://www.OpenBSD.org
+Copyright (c) 1995-2020 OpenBSD. All rights reserved.  https://www.OpenBSD.org
 
-OpenBSD 5.9 (RAMDISK) #0: Fri Mar  4 23:48:03 JST 2016
-    aoyama@rhea.in.nk-home.net:/w1/o/5.9/src/sys/arch/luna88k/compile/RAMDISK
+OpenBSD 6.8 (RAMDISK) #0: Tue Oct 13 00:19:54 JST 2020
+    aoyama@aurora.in.nk-home.net:/w1/o/6.8/src/sys/arch/luna88k/compile/RAMDISK
 real mem = 117440512 (112MB)
-avail mem = 110456832 (105MB)
+avail mem = 110452736 (105MB)
+random: boothowto does not indicate good seed
 mainbus0 at root: OMRON LUNA-88K, 25MHz
 cpu0: M88100 rev 0x3, 2 CMMU
 cpu0: M88200 (16K) rev 0x9, full Icache
@@ -134,66 +124,70 @@ spc0: SCSI bus reset
 spc0: SCSI bus reset
 spc0: SCSI bus reset
 spc0: SCSI bus reset
-boot device: &lt;unknown>
+boot device: <unknown>
 root on rd0a swap on rd0b dump on rd0b
-WARNING: clock lost 281 days -- CHECK AND RESET THE DATE!
+WARNING: bad clock chip time
+WARNING: CHECK AND RESET THE DATE!
 erase ^?, werase ^W, kill ^U, intr ^C, status ^T
 
-Welcome to the OpenBSD/luna88k 5.9 installation program.
-(I)nstall, (U)pgrade, (A)utoinstall or (S)hell? s
-# echo $OBSD
-OpenBSD/luna88k 5.9
-# 
+Welcome to the OpenBSD/luna88k 6.8 installation program.
+(I)nstall, (U)pgrade, (A)utoinstall or (S)hell? <b>s</b>
+# <b>set</b>
+ARCH=luna88k
+DONEPROFILE=YES
+HOME
+IFS=' 	
+'
+MAILCHECK=600
+OBSD='OpenBSD/luna88k 6.8'
+OLDPWD
+OPTIND=1
+PATH=/sbin:/bin:/usr/bin:/usr/sbin:/
+PPID=1
+PS1='\h\$ '
+PS2='> '
+PS3='#? '
+PS4='+ '
+PWD=/
+RANDOM
+REPLY=s
+SECONDS=213
+SHELL
+SH_VERSION='@(#)PD KSH v5.2.14 99/07/13.2'
+TMOUT=0
+VERSION=68
+VNAME=6.8
+rootdisk=rd0a
+timeout=false
+timer_pid=
+# <b>ls -l</b>
+total 156
+-rw-r--r--  1 root  wheel   1480 Oct 12 16:50 .profile
+lrwxr-xr-x  1 root  wheel     11 Oct 12 16:50 autoinstall -> install.sub
+drwxr-xr-x  2 root  wheel    512 Oct 12 16:45 bin
+drwxr-xr-x  2 root  wheel   8192 Oct 12 16:46 dev
+drwxr-xr-x  5 root  wheel    512 Oct 12 16:50 etc
+lrwxr-xr-x  1 root  wheel     11 Oct 12 16:50 install -> install.sub
+-rw-r--r--  1 root  wheel    335 Oct 12 16:50 install.md
+-rwxr-xr-x  1 root  wheel  59228 Oct 12 16:50 install.sub
+drwxr-xr-x  2 root  wheel    512 Oct 12 16:45 mnt
+drwxr-xr-x  2 root  wheel    512 Oct 12 16:45 mnt2
+drwxr-xr-x  2 root  wheel    512 Oct 12 16:45 sbin
+drwxrwxrwt  4 root  wheel    512 Oct 12 16:50 tmp
+lrwxr-xr-x  1 root  wheel     11 Oct 12 16:50 upgrade -> install.sub
+drwxr-xr-x  6 root  wheel    512 Oct 12 16:45 usr
+drwxr-xr-x  6 root  wheel    512 Oct 12 16:50 var
+# <b>halt</b>
+syncing disks... done
+halted
+
 </pre>
 
-<p>It seems that some versions of OpenBSD had a tiny bug in the framebuffer
-scroll up routine, so it does not contain any loads or stores.
+<p>(Add <tt>-X</tt> to try the graphical framebuffer.)
 
-<p>Using a breakpoint
-<tt>-p om1_windowmove</tt> in both OpenBSD 5.9 and 6.2 indicates that 
-5.9 must have been optimized too heavily or had a bug; it loops when trying to copy
-pixels to scroll up the text, but the loop contains "nothing":
-
-<pre>
-s001553b8: 64e70001	subu	r7,r7,1
-s001553bc: 61270001	addu	r9,r7,1
-s001553c0: ec4c0004	bcnd.n	eq0,r12,0x001553d0	; &lt;om1_windowmove+0x3b0>
-s001553c4: 59600000 (d)	or	r11,r0,0x0
-s001553c8: f1a08832	set	r13,r0,1&lt;18>
-s001553cc: f562600d	addu	r11,r2,r13
-s001553d0: 60420004	addu	r2,r2,4
-s001553d4: eda9fff9	bcnd.n	ne0,r9,0x001553b8	; &lt;om1_windowmove+0x398>
-s001553d8: 616b0004 (d)	addu	r11,r11,4
-s001553b8: 64e70001	subu	r7,r7,1
-...
-</pre>
-
-<p>compared to what it looks like in 6.2:
-
-<pre>
-s001547a4: 64e70001	subu	r7,r7,1
-s001547a8: 61270001	addu	r9,r7,1
-s001547ac: 60420004	addu	r2,r2,4
-s001547b0: eda9fffa	bcnd.n	ne0,r9,0x00154798	; &lt;om1_windowmove+0x398>
-s001547b4: 616b0004 (d)	addu	r11,r11,4
-s00154798: edac003e	bcnd.n	ne0,r12,0x00154890	; &lt;om1_windowmove+0x490>
-s0015479c: f1208832 (d)	set	r9,r0,1&lt;18>
-s00154890: f5021409	ld	r8,r2,r9	; [0xb10c958c]
-s00154894: c7ffffc4	br.n	0x001547a4	; &lt;om1_windowmove+0x3a4>
-s00154898: f500240b (d)	st	r8,r0,r11	; [0xb1087f8c]
-s001547a4: 64e70001	subu	r7,r7,1
-</pre>
-
-<p>Note the actual loads and stores to video ram (0xb10.....).
-
-<p>Going back all the way to an old 5.4 kernel allows the framebuffer to 
-be used:
-<pre>
-	<b>gxemul -X -e luna-88k 0x20000:0x20:bsd.rd</b>
-</pre>
-
-<p>
-<a href="20180220-openbsd-luna88k-5.4.png"><img src="20180220-openbsd-luna88k-5.4-small.png"></a>
+<p><b><font color="red">NOTE:</font></b>: As neither SCSI nor network is emulated
+yet, there is not much that can be done yet with the emulated machine, other
+than poke around in the ramdisk environment.
 
 
 <p>The following is not needed in order to experiment with booting OpenBSD,
@@ -204,11 +198,6 @@ but can be interesting nonetheless: Download
 	<b>gxemul -v -e luna-88k 0x00700000:0x20:0x00700000:boot</b>
 </pre>
 
-
-
-
-
-<p><br>
 
 
 
